--- a/navbar.html
+++ b/navbar.html
@@ -1,12 +1,12 @@
 <nav class="navbar">
     <div class="logo">
-        <a href="/home/"><img class="cumcolor" src="https://static.wikia.nocookie.net/robloxcities/images/d/d2/RobloxLogo.png" alt=""><p>HeYSeNHeLlO's Roblox Services</p></a>
+        <a href="/"><img class="cumcolor" src="https://static.wikia.nocookie.net/robloxcities/images/d/d2/RobloxLogo.png" alt=""><p>HeYSeNHeLlO's Roblox Services</p></a>
     </div>
     <div class="toggle">
         <a href="#"><img class="cumcolor" src="https://upload.wikimedia.org/wikipedia/commons/b/b2/Hamburger_icon.svg" alt=""></a>
     </div>
     <ul>
-        <li class="nav-home"><a href="/home/">Home</a></li>
+        <li class="nav-home"><a href="/">Home</a></li>
         <li class="nav-about"><a href="/about/">About</a></li>
         <li class="nav-hire"><a href="/hire/">Hire Me</a></li>
     </ul>
